[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/KiriFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 4
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=6]
resource_name = "menu"
tracks/0/type = "value"
tracks/0/path = NodePath("Button:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Easy:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hard:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Mull:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Ins:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("InsW:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("InsS:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("W:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("W2:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFont" id=7]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 30
outline_size = 2
font_data = ExtResource( 1 )

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1.18918
margin_right = 1278.81
margin_bottom = 720.0
color = Color( 0.0509804, 0.0745098, 0.0862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 316.246
margin_top = 164.31
margin_right = 973.246
margin_bottom = 265.31
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.945098, 0, 1, 1 )
text = "Pink Ponk"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" type="Button" parent="."]
margin_left = 535.019
margin_top = 330.836
margin_right = 708.019
margin_bottom = 413.836
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0588235, 0.909804, 0.0745098, 1 )
custom_colors/font_color_hover = Color( 0.945098, 0.054902, 0.054902, 1 )
text = "Easy"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hard" type="Button" parent="."]
margin_left = 535.019
margin_top = 441.436
margin_right = 708.019
margin_bottom = 524.436
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0705882, 0.333333, 0.917647, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "EXPERT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mull" type="Button" parent="."]
margin_left = 499.383
margin_top = 557.253
margin_right = 740.383
margin_bottom = 633.253
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.92549, 0.0392157, 0.0392157, 1 )
custom_colors/font_color_hover = Color( 0.0470588, 0.941176, 0.101961, 1 )
text = "MULtiplayer"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 1189.37
margin_right = 1281.37
margin_bottom = 40.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.133333, 0.0431373, 0.921569, 1 )
text = "EXIT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "menu"
anims/menu = SubResource( 6 )

[node name="Ins" type="Label" parent="."]
margin_left = 74.8775
margin_top = 387.307
margin_right = 243.878
margin_bottom = 435.307
custom_fonts/font = SubResource( 7 )
text = "How to Play?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InsW" type="Label" parent="."]
margin_left = 109.501
margin_top = 500.676
margin_right = 278.501
margin_bottom = 548.676
custom_fonts/font = SubResource( 7 )
text = ": Move Down"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InsS" type="Label" parent="."]
margin_left = 91.5013
margin_top = 435.361
margin_right = 260.501
margin_bottom = 483.361
custom_fonts/font = SubResource( 7 )
text = ": Move Up"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="W" type="Label" parent="."]
margin_left = 67.0271
margin_top = 436.353
margin_right = 118.027
margin_bottom = 485.353
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.960784, 0.772549, 0.0313726, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "W"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="W2" type="Label" parent="."]
margin_left = 64.397
margin_top = 497.756
margin_right = 115.397
margin_bottom = 546.756
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.960784, 0.772549, 0.0313726, 1 )
text = "S"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="Mull" to="." method="_on_Mull_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
